@@ -7,6 +7,8 @@ import io.cucumber.java.BeforeAll;
 import io.cucumber.java.Scenario;
 import io.cucumber.java.en.*;
 import org.openqa.selenium.*;
+import io.github.bonigarcia.wdm.WebDriverManager;
+
 import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.support.ui.WebDriverWait;
@@ -17,15 +19,12 @@ import org.codehaus.jackson.map.ObjectMapper;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.net.HttpURLConnection;
-import java.net.URI;
-import java.net.URL;
+import java.net.*;
+
 import java.nio.file.*;
 import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipInputStream;
 
 public class UiIntegrationSteps {
     private static Thread serverThread;
@@ -35,8 +34,51 @@ public class UiIntegrationSteps {
     private static WebDriver driver;
     private static int initialTime;
 
+    public static boolean isServerRunning() {
+        HttpURLConnection conn = null;
+        try {
+            conn = (HttpURLConnection) URI.create("http://localhost:8080/").toURL().openConnection();
+            conn.setConnectTimeout(500);
+            conn.setReadTimeout(500);
+            conn.setRequestMethod("GET");
+            return conn.getResponseCode() == 200;
+            // handle response
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        } finally {
+            if (conn != null) {
+                conn.disconnect();
+            }
+        }
+    }
+
     @BeforeAll
     public static void startServer() throws Exception {
+        if (isServerRunning()) {
+            System.out.println("Server already running, reusing existing instance");
+            startChromeDriver();
+            return;
+        }
+        final AtomicReference<Throwable> serverError = setupAndStartServer();
+
+        for (int i = 0; i < 300; i++) {
+            if (serverError.get() != null) {
+                throw new IllegalStateException("Failed to start service", serverError.get());
+            }
+            if (isServerRunning()) {
+                System.out.println("Server started successfully");
+                startChromeDriver();
+                return;
+            }
+            Thread.sleep(100);
+        }
+        if (serverError.get() != null) {
+            throw new IllegalStateException("Failed to start service", serverError.get());
+        }
+        throw new IllegalStateException("Server failed to start within timeout");
+    }
+
+    private static AtomicReference<Throwable> setupAndStartServer() throws IOException {
         originalUserDir = System.getProperty("user.dir");
         originalResourceBase = System.getProperty("RESOURCE_BASE");
         Path dist = Paths.get("src/main/dist").toAbsolutePath();
@@ -74,33 +116,27 @@ public class UiIntegrationSteps {
         }, "scoreboard-server");
         serverThread.setDaemon(true);
         serverThread.start();
+        return serverError;
+    }
 
-        URL url = new URL("http://localhost:8080/");
-        for (int i = 0; i < 300; i++) {
-            if (serverError.get() != null) {
-                throw new IllegalStateException("Failed to start service", serverError.get());
-            }
-            try {
-                HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-                conn.setConnectTimeout(100);
-                conn.setReadTimeout(100);
-                if (conn.getResponseCode() == 200) {
-                    conn.disconnect();
-                    setupChromeDriver();
-                    ChromeOptions options = new ChromeOptions();
-                    options.addArguments("--headless=new", "--no-sandbox", "--disable-dev-shm-usage");
-                    driver = new ChromeDriver(options);
-                    return;
-                }
-            } catch (IOException e) {
-                // retry
-            }
-            Thread.sleep(100);
+    private static void startChromeDriver() {
+        System.out.println("[ChromeDriver] Server started, initializing driver");
+        String proxy = System.getenv("https_proxy");
+        if (proxy != null && !proxy.isEmpty()) {
+            URI uri = URI.create(proxy);
+            System.setProperty("https.proxyHost", uri.getHost());
+            System.setProperty("https.proxyPort", String.valueOf(uri.getPort()));
+            System.setProperty("http.proxyHost", uri.getHost());
+            System.setProperty("http.proxyPort", String.valueOf(uri.getPort()));
+            String proxyHostPort = uri.getHost() + ":" + uri.getPort();
+            System.out.println("[ChromeDriver] Using proxy: " + proxyHostPort);
+            WebDriverManager.chromedriver().proxy(proxyHostPort).setup();
+        } else {
+            WebDriverManager.chromedriver().setup();
         }
-        if (serverError.get() != null) {
-            throw new IllegalStateException("Failed to start service", serverError.get());
-        }
-        throw new IllegalStateException("Server failed to start within timeout");
+        ChromeOptions options = new ChromeOptions();
+        options.addArguments("--headless=new", "--no-sandbox", "--disable-dev-shm-usage");
+        driver = new ChromeDriver(options);
     }
 
     @AfterAll
@@ -125,11 +161,13 @@ public class UiIntegrationSteps {
                             }
                         });
             }
-            System.setProperty("user.dir", originalUserDir);
-            if (originalResourceBase != null) {
-                System.setProperty("RESOURCE_BASE", originalResourceBase);
-            } else {
-                System.clearProperty("RESOURCE_BASE");
+            if (originalUserDir != null) {
+                System.setProperty("user.dir", originalUserDir);
+                if (originalResourceBase != null) {
+                    System.setProperty("RESOURCE_BASE", originalResourceBase);
+                } else {
+                    System.clearProperty("RESOURCE_BASE");
+                }
             }
         }
     }
@@ -151,11 +189,11 @@ public class UiIntegrationSteps {
 
     @Before
     public void resetGame() throws Exception {
-        postJson("/api/game", new HashMap<>());
+        postJson(new HashMap<>());
     }
 
-    private static void postJson(String path, Map<String, Object> body) throws Exception {
-        HttpURLConnection conn = (HttpURLConnection) new URL("http://localhost:8080" + path).openConnection();
+    private static void postJson(Map<String, Object> body) throws Exception {
+        HttpURLConnection conn = (HttpURLConnection) URI.create("http://localhost:8080/api/game").toURL().openConnection();
         conn.setRequestMethod("POST");
         conn.setConnectTimeout(2000);
         conn.setReadTimeout(2000);
@@ -203,7 +241,7 @@ public class UiIntegrationSteps {
 
     @When("I create a new game")
     public void createNewGame() throws Exception {
-        jsClick("button[href='#new-game-dialog']");
+        jsClick("button[href=\"#new-game-dialog\"]");
         Thread.sleep(100);
         jsClick("#new-game");
         new WebDriverWait(driver, Duration.ofSeconds(2)).until(
@@ -237,8 +275,17 @@ public class UiIntegrationSteps {
     @Given("the clock is stopped")
     public void theClockIsStopped() {
         driver.get("http://localhost:8080/");
+        // the clock starts at 0 when the page loads - wait for it to load
+        // check the tens and minutes digit to be non-zero
+        new WebDriverWait(driver, Duration.ofSeconds(2)).until(
+                d -> !(d.findElement(By.cssSelector(".digit.minutes.tens")).getText().equals("0")
+                       && d.findElement(By.cssSelector(".digit.minutes.ones")).getText().equals("0"))
+        );
+
+        // ensure the clock is stopped
         jsClick("#clock-pause");
         initialTime = readClockMillis();
+        assert initialTime > 0;
     }
 
     @When("I start the clock")
@@ -329,50 +376,5 @@ public class UiIntegrationSteps {
     private void jsClick(String selector) {
         ((JavascriptExecutor) driver).executeScript(
                 "var el=document.querySelector('" + selector + "'); if(el) el.click();");
-    }
-
-    private static void setupChromeDriver() throws Exception {
-        Path driverDir = Paths.get("build", "chromedriver");
-        Path driverPath = driverDir.resolve("chromedriver");
-        if (Files.notExists(driverPath)) {
-            Files.createDirectories(driverDir);
-            String versionLine = runAndGetOutput("google-chrome", "--version").trim();
-            String version = versionLine.replace("Google Chrome ", "");
-            String url = "https://storage.googleapis.com/chrome-for-testing-public/" +
-                    version + "/linux64/chromedriver-linux64.zip";
-            String proxy = System.getenv("https_proxy");
-            if (proxy != null && !proxy.isEmpty()) {
-                URI uri = URI.create(proxy);
-                System.setProperty("https.proxyHost", uri.getHost());
-                System.setProperty("https.proxyPort", String.valueOf(uri.getPort()));
-                System.setProperty("http.proxyHost", uri.getHost());
-                System.setProperty("http.proxyPort", String.valueOf(uri.getPort()));
-            }
-            Path zip = driverDir.resolve("chromedriver.zip");
-            try (InputStream in = new URL(url).openStream()) {
-                Files.copy(in, zip, StandardCopyOption.REPLACE_EXISTING);
-            }
-            try (ZipInputStream zis = new ZipInputStream(Files.newInputStream(zip))) {
-                ZipEntry entry;
-                while ((entry = zis.getNextEntry()) != null) {
-                    if (entry.getName().endsWith("/chromedriver")) {
-                        Files.copy(zis, driverPath, StandardCopyOption.REPLACE_EXISTING);
-                        driverPath.toFile().setExecutable(true);
-                        break;
-                    }
-                }
-            }
-            Files.deleteIfExists(zip);
-        }
-        System.setProperty("webdriver.chrome.driver", driverPath.toString());
-    }
-
-    private static String runAndGetOutput(String... cmd) throws Exception {
-        Process p = new ProcessBuilder(cmd).redirectErrorStream(true).start();
-        try (InputStream is = p.getInputStream()) {
-            String out = new String(is.readAllBytes());
-            p.waitFor();
-            return out;
-        }
     }
 }
